[package]
name = "minsc"
version = "0.2.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"
include = [ "/src", "/build.rs", "/LICENSE" ]

description = " A Miniscript-based high-level scripting language for Bitcoin contracts"
repository = "https://github.com/shesek/minsc"
homepage = "https://min.sc/"
license = "MIT"
readme = "README.md"

[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer"] }

[dependencies]
miniscript = { version = "11.0", features = ["compiler"] }

lalrpop-util = "0.20"
regex = "1.3.9"
thiserror = "1.0.20"
chrono = "0.4.13"
lazy_static = "1.4.0"

serde = { version = "1", features=["derive"], optional = true }
wasm-bindgen = { version = "0.2.65", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[features]
# default = ["wee_alloc"]
default = [ "wasm", "playground" ]
wasm = [ "wasm-bindgen" ]
playground = [ "wasm", "serde", "wasm-bindgen/serde-serialize" ]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
# webpack fail wasm compilation without this
opt-level = "s"
