[package]
name = "minsc"
version = "0.2.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"
include = [ "/src", "/build.rs", "/LICENSE" ]

description = "A scripting language for Bitcoin"
repository = "https://github.com/shesek/minsc"
homepage = "https://min.sc/"
license = "MIT"
readme = "README.md"

[build-dependencies]
lalrpop = { version = "0.21", features = ["lexer"] }

[dependencies]
miniscript = { version = "12", features = ["compiler"] }

lalrpop-util = "0.21"
regex = "1"
base64 = "0.22"
thiserror = "1.0.20"
chrono = "0.4.13"
lazy_static = "1.4.0"

serde = { version = "1", features=["derive"], optional = true }
wasm-bindgen = { version = "0.2.65", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# needed to enable 'rand-std' (rust-miniscript does not provide a way to propagate the feature)
bitcoin = { version = "0.32", features = ["std", "secp-recovery", "rand", "rand-std"] }
# needed to enable 'js' (enabled for the 'wasm' feature below)
getrandom = { version = "0.2" }

[features]
# default = ["wee_alloc"]
default = [ "wasm", "playground" ]
wasm = [ "wasm-bindgen", "getrandom/js" ]
playground = [ "wasm", "serde", "wasm-bindgen/serde-serialize", "console_error_panic_hook" ]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
# webpack fail wasm compilation without this
opt-level = "s"
