[package]
name = "minsc"
version = "0.2.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"
include = [ "/src", "/build.rs", "/LICENSE" ]

description = "A scripting language for Bitcoin"
repository = "https://github.com/shesek/minsc"
homepage = "https://min.sc/"
license = "MIT"
readme = "README.md"

[build-dependencies]
lalrpop = { version = "0.21", features = ["lexer"] }

[dependencies]
miniscript = { version = "12", features = ["compiler"] }
bitcoin = { version = "0.32", features = ["rand-std", "base64"] }

lalrpop-util = "0.21"
regex = "1"
base64 = "0.22"
thiserror = "1.0.20"
chrono = "0.4.13"
lazy_static = "1.4.0"

serde = { version = "1", features=["derive"], optional = true }
wasm-bindgen = { version = "0.2.65", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# not used directly, needed to enable 'getrandom/js' (for the 'wasm' feature below)
getrandom = { version = "0.2", optional = true }

[features]
wasm = [ "wasm-bindgen", "getrandom", "getrandom/js" ] # wee_alloc? seems to result in larger files
playground = [ "wasm", "serde", "wasm-bindgen/serde-serialize", "console_error_panic_hook" ]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = "s"
